--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,22 @@
 /*h1{
     color: rebeccapurple;
 }*/
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
+.wrapper {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
+}
+
+
 h1 {
     font-size: 3rem;
     color: #FFD700; /* Gold for contrast */
@@ -13,15 +29,15 @@ h1 {
 
 
 .navbar {
-   /* display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: rgba(0, 0, 0, 0.6);
-    font-size : 1.2rem;
-    height: 80px;
-    top: 0;
-    position: sticky;
-    z-index: 999;*/
+    /* display: flex;
+     justify-content: space-between;
+     align-items: center;
+     background: rgba(0, 0, 0, 0.6);
+     font-size : 1.2rem;
+     height: 80px;
+     top: 0;
+     position: sticky;
+     z-index: 999;*/
 
     display: flex;
     justify-content: space-between;
@@ -51,7 +67,7 @@ body {
 }
 
 #navbar__logo{
-   /* background-color : #ff8177*/;
+    /* background-color : #ff8177*/;
     background-image: linear-gradient(to top,rgba(0, 0, 0, 0.5) 0%, rgb(255,255,255) 1%);
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -62,14 +78,14 @@ body {
     text-decoration: none;
     font-size: 2rem;
 
-  /*  display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    background: rgba(0, 0, 0, 0.6);
-    position: fixed;
-    width: 100%;
-    top: 0;*/
+    /*  display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px;
+      background: rgba(0, 0, 0, 0.6);
+      position: fixed;
+      width: 100%;
+      top: 0;*/
 
 }
 
@@ -106,7 +122,7 @@ body {
     justify-content: center;
     align-items: center;
     padding: 0 1rem;
-   width: 100%;
+    width: 100%;
 }
 
 * {
@@ -157,6 +173,7 @@ body {
 .buttons {
     display: flex;
     gap: 15px;
+    margin-top: 50px;
 }
 
 .btn {
@@ -237,3 +254,4 @@ body {
 .container .About__Us,.Our__Partners,.CEO__Address{
     margin-bottom: 100px;
 }
+
