--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,20 +29,10 @@ h1 {
 
 
 .navbar {
-    /* display: flex;
-     justify-content: space-between;
-     align-items: center;
-     background: rgba(0, 0, 0, 0.6);
-     font-size : 1.2rem;
-     height: 80px;
-     top: 0;
-     position: sticky;
-     z-index: 999;*/
-
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding: 20px;
+    align-items : end;
+    /*padding: 10px;*/
     background: rgba(0, 0, 0, 0.6);
     position: sticky;
     width: 100%;
@@ -57,17 +47,16 @@ body {
 
 .navbar__container {
     display: flex;
-    justify-content: space-between;
+    justify-content: inherit;
     height: 80px;
     z-index: 1;
     width: 100%;
-    max-width: 1300px;
     margin : 0 auto ;
     padding: 0 50px;
 }
 
 #navbar__logo{
-    /* background-color : #ff8177*/;
+
     background-image: linear-gradient(to top,rgba(0, 0, 0, 0.5) 0%, rgb(255,255,255) 1%);
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -77,16 +66,6 @@ body {
     cursor: pointer;
     text-decoration: none;
     font-size: 2rem;
-
-    /*  display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px;
-      background: rgba(0, 0, 0, 0.6);
-      position: fixed;
-      width: 100%;
-      top: 0;*/
-
 }
 
 .fa-gem {
@@ -96,7 +75,9 @@ body {
 .navbar__menu {
     display: flex;
     align-items: center;
+    justify-content: right;
     list-style: none;
+    height: 80px;
 }
 
 .navbar__menu a:hover {
@@ -104,7 +85,7 @@ body {
 }
 
 .navbar__item {
-    height: 80px;
+    height: 80%;
 }
 
 .navbar__links {
@@ -150,8 +131,8 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* Dark overlay effect */
-    /*background: url('assets/images/royalPurple.webp') no-repeat center center/cover;*/
+    background: rgba(0, 0, 0, 0.5);
+
 }
 
 .content {
@@ -186,7 +167,7 @@ body {
     border-radius: 5px;
 }
 
-/*WHO WE ARE Button*/
+
 .btn-primary {
     background: #FFD700; /* Gold */
     color: #4B0082;
@@ -255,3 +236,66 @@ body {
     margin-bottom: 100px;
 }
 
+@media (max-width: 600px) {
+
+    .navbar {
+       /* display: flex;
+        justify-content: space-between;
+        align-items : end;
+        padding: 10px;*/
+        background: rgba(0, 0, 0, 0.6);
+        position: static;
+        width: 100%;
+        top: 0;
+        z-index: 999;
+    }
+
+    #navbar__logo{
+
+        background-image: linear-gradient(to top,rgba(0, 0, 0, 0.5) 0%, rgb(255,255,255) 1%);
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        display : block;
+        align-items: center;
+        cursor: pointer;
+        text-decoration: none;
+        font-size: 1rem;
+        position: absolute !important;
+        left : 15px;
+        top: 25px;
+        width : 40%
+
+    }
+
+    .navbar__links {
+        color: white;
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        justify-content : right;
+        padding: 0 0.5rem;
+        height: 60%;
+    }
+
+    .navbar__container {
+        display: flex;
+        justify-content: inherit;
+        height: 80px;
+        z-index: 1;
+        width: 100%;
+        margin : 0 auto ;
+        padding: 0 50px;
+    }
+    .navbar__menu {
+        display: flex;
+        align-items: center;
+        justify-content: right;
+        position: absolute !important;
+        height: 80px;
+        right : 10px;
+        top : 10px;
+    }
+
+
+}
