--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ body {
 
     background-image: linear-gradient(to top,rgba(0, 0, 0, 0.5) 0%, rgb(255,255,255) 1%);
     -webkit-background-clip: text;
-    -moz-background-clip: text;
+    /*-moz-background-clip: text;*/
     -webkit-text-fill-color: transparent;
     display: flex;
     align-items: center;
@@ -239,14 +239,15 @@ body {
 @media (max-width: 600px) {
 
     .navbar {
-       /* display: flex;
+        display: flex;
         justify-content: space-between;
         align-items : end;
-        padding: 10px;*/
+        padding: 10px;
         background: rgba(0, 0, 0, 0.6);
         position: static;
         width: 100%;
         top: 0;
+        height: 100%;
         z-index: 999;
     }
 
@@ -254,7 +255,7 @@ body {
 
         background-image: linear-gradient(to top,rgba(0, 0, 0, 0.5) 0%, rgb(255,255,255) 1%);
         -webkit-background-clip: text;
-        -moz-background-clip: text;
+        /*-moz-background-clip: text;*/
         -webkit-text-fill-color: transparent;
         display : block;
         align-items: center;
